# Quran-API

./: LICENSE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
quran-api/: .gitignore  CMakeLists.txt  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
quran-api/src/androidTest/java/com/nelu/quran_api/: BenchmarkTest.kt  ExampleInstrumentedTest.kt  RepositoryTesting.kt
quran-api/src/main/: AndroidManifest.xml
quran-api/src/main/cpp/: native-lib.cpp
quran-api/src/main/java/com/nelu/quran_api/binary/: BinaryIndex.kt  BinaryJuz.kt  BinaryQari.kt  BinaryQuran.kt  BinarySurah.kt  BinaryTranslation.kt
quran-api/src/main/java/com/nelu/quran_api/data/constant/: Audio.kt  Sensitive.kt
quran-api/src/main/java/com/nelu/quran_api/data/db/: DaoQuran.kt  DaoSurah.kt  DatabaseQuran.kt  DatabaseSurah.kt  ImplJuz.kt  ImplPage.kt  ImplQari.kt  ImplQuran.kt  ImplSurah.kt  ImplTranslation.kt
quran-api/src/main/java/com/nelu/quran_api/data/model/: ModelIndex.kt  ModelJuz.kt  ModelQari.kt  ModelQuran.kt  ModelSurah.kt  ModelTranslator.kt
quran-api/src/main/java/com/nelu/quran_api/data/repository/: RepositoryAudio.kt  (+5 more)
quran-api/src/main/java/com/nelu/quran_api/di/: BaseAPI.kt  QuranAPI.kt  Start.kt
quran-api/src/main/java/com/nelu/quran_api/service/: AudioController.kt  AudioService.kt
quran-api/src/main/java/com/nelu/quran_api/utils/: NativeUtils.kt
quran-api/src/main/proto/: DaoQuranData.proto  DaoTranslation.proto  surah.proto
quran-api/src/main/res/raw/: en.txt
quran-api/src/test/java/com/nelu/quran_api/: ExampleUnitTest.kt
(+79 files in other folders)
